--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+html, body {
+  height: 100%;
+}
+
+html {
+  background-image: url('https://www.goffbooks.com/wp-content/uploads/2020/02/9781951541187_002_iart-1024x664.jpg');
+  background-size: cover;
+  repeat: no-repeat;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +16,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  box-sizing: border-box;
+  line-height: 1.5;
 }
 
 code {
@@ -13,7 +25,19 @@ code {
     monospace;
 }
 
-html {
-  background-image: url('https://www.goffbooks.com/wp-content/uploads/2020/02/9781951541187_002_iart-1024x664.jpg');
-  background-size: cover;
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
 }
