--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,4 +2,6 @@
     box-sizing: border-box;
     border: 3px solid black;
     padding: 10px;
+    background-color: rgb(155, 155, 155, .8);
+    box-shadow: 3px 3px teal, -1em 0 .4em black;
   }
