--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input, textarea, select {
   font: inherit;
 }
 
